src/components/template/navbar/index.css
.navbar {
    border-right: #ccc 2px solid;
    width: 100%;
    height: 100%;
    background: #fff;
    display: block;
    word-break: break-all;
}
.navbar ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
.navbar ul li {
    padding: 10px;
    font-size: 16px;
    display: block;
    text-align: left;
}
.navbar ul li.minimized {
    text-align: center;
    font-size: 12px;
    display: block;
    padding: 10px 0;
}
.navbar .minimized small {
    display: block;
}
.navbar i {
    margin-right: 10px;
    font-size: 20px;
}
.navbar .minimized i {
    margin: 0 0 10px 0;
}
.navbar ul li a {
    margin-right: 30px;
    text-decoration: none;
    color: #555;
}
.navbar ul li a:hover {
    color: royalblue;
    text-decoration: underline;
}
.navbar ul li a:focus {
    color: darkblue;
    text-decoration: underline;
}
.navbar .curr-page {
    text-decoration: underline;
    font-weight: bold;
    color: #000;
}
.navbar {
    height: calc(100vh - 60px);
    overflow-y: auto;
}
.navbar .icon {
    width: 30px;
    text-align: center;
}
@media only screen and (max-width: 530px) {
    .navbar {
        height: calc(100vh - 80px);
    }
}

